fixing package json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,8 @@
 {
-  "name": "adminprobackend",
+  "name": "server",
   "version": "1.0.0",
-  "description": "MERN api",
+  "description": "AdminPro",
   "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon ."
-  },
-  "author": "Brian Olaya Torres",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -20,6 +11,22 @@
     "express-validator": "^6.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
-    "nodemailer": "^6.4.10"
-  }
+    "nodemailer": "^6.4.10",
+    "nodemon": "^2.0.4"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BrianOlaya/adminpro-server.git"
+  },
+  "author": "Brian Olaya",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/BrianOlaya/adminpro-server/issues"
+  },
+  "homepage": "https://github.com/BrianOlaya/adminpro-server#readme"
 }
